--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <section>
+            <h1> о нас</h1>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </section>
+    </header>
 </body>
 </html>
