--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             <h1> о нас</h1>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
         </section>
+        <div class="header__logo">
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae id sapiente suscipit quod esse provident officia repellat libero veritatis. Fuga, eveniet? Corrupti quia quis nesciunt in. Nemo asperiores deleniti deserunt?</p>
+        </div>
     </header>
 </body>
 </html>
