--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <img src="" alt="">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae id sapiente suscipit quod esse provident officia repellat libero veritatis. Fuga, eveniet? Corrupti quia quis nesciunt in. Nemo asperiores deleniti deserunt?</p>
         </div>
+        <div class="coment">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis maiores quod qui delectus est ullam aperiam pariatur in accusamus rerum officia, ratione expedita necessitatibus ipsa sequi magnam nisi, eligendi aspernatur.</p>
+        </div>
     </header>
 </body>
 </html>
